// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/FileUploader Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r4:"
            class="FileUploader_dropZone__YfvZ-  "
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r4:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU dummyClassname "
       lang="en"
       data-testid="123ID"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id="htmlId"
            class="FileUploader_dropZone__YfvZ-  "
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for="htmlId"
        >
          Legg til fil
        </label>
        <input data-testid="123ID-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithCustomClassNames play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  dummyClassname">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r28:"
            class="FileUploader_dropZone__YfvZ- FileUploader_dropZone_error__PRhyM "
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r28:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW dummyClassname">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          feil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithError play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  ">
    <label id="labelId-:rs:"
           class="LabelWithHelp_label__59tP-"
           for=":rr:"
    >
      Hemmelig kode
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:rs:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:rt:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:rt:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":rr:"
            class="FileUploader_dropZone__YfvZ- FileUploader_dropZone_error__PRhyM "
            aria-describedby=":rr:-accepted-formats"
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":rr:"
        >
          Legg til fil(er)
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               multiple
               hidden
        >
      </div>
    </button>
    <span id=":rr:-accepted-formats"
          class="FileUploader_fileInfo__-oBU8"
    >
      Filer du kan laste opp:
      <span class="FileUploader_fileFormatList__hIHfD">
        .java, .cpp, .py
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
      <div class="ErrorMessage_errorMessage__508oW ">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo ErrorMessage_errorMessageIcon__2N-Qa"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
          </path>
        </svg>
        <p class="ErrorMessage_errorMessageText__e27TU">
          Du må laste opp en fil
        </p>
      </div>
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithFileChange play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  "
       data-testid="testid123"
  >
    <label id="labelId-:r1t:"
           class="LabelWithHelp_label__59tP-"
           for=":r1s:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r1t:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r1u:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r1u:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1s:"
            class="FileUploader_dropZone__YfvZ-  "
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r1s:"
        >
          Legg til fil
        </label>
        <input data-testid="testid123-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="FileUploader_fileList__Rex9N">
      <li id=":r20:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <a id=":r20:-file-file.txt"
               class="Link_link__jeUpY  FileUploaderFile_fileListText__ro0Ol"
               href="#"
               download
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo Link_icon__iy55p Link_icon_isCustom__nsOot"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              file.txt
            </a>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS FileUploaderFile_successIconLinkMargin__OVlgK"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r22:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r22:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":r20:-file-file.txt"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r23:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r23:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
      Kunne ikke fjerne fil
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithHelpToggleEvent smoke-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  ">
    <label id="labelId-:r25:"
           class="LabelWithHelp_label__59tP-"
           for=":r24:"
    >
      Last opp filer
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r25:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r26:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r26:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r24:"
            class="FileUploader_dropZone__YfvZ-  "
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r24:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithIsUploading smoke-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":rq:"
            class="FileUploader_dropZone__YfvZ-  "
            disabled
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <div aria-live="polite"
             aria-atomic="true"
             class="Spinner_spinner__RJ9Al Spinner_spinner_blue__khcHU Spinner_spinner_flexColumn__3SCpy Spinner_spinner_large__QByjP  "
        >
          <div class="Spinner_spinnerAnimation__nAt8p ">
          </div>
          <span class="Spinner_spinnerTitle__4A7b4  Spinner_spinnerTitle_centerText__ud193 FileUploader_spinner__qs4PM">
            Opplasting pågår
          </span>
        </div>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":rq:"
        >
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  "
       id="dummyIdForwardedFromRef"
  >
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r0:"
            class="FileUploader_dropZone__YfvZ-  "
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r0:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               hidden
        >
      </div>
    </button>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithTextOverrides play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1m:"
            class="FileUploader_dropZone__YfvZ-  "
            aria-describedby=":r1m:-accepted-formats"
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r1m:"
        >
          Trykk eller dra og slipp filer her
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept="image/png"
               hidden
        >
      </div>
    </button>
    <span id=":r1m:-accepted-formats"
          class="FileUploader_fileInfo__-oBU8"
    >
      Tillatte filformater:_
      <span class="FileUploader_fileFormatList__hIHfD">
        bilder og dokumenter
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="FileUploader_fileList__Rex9N">
      <li id=":r1o:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <span class="FileUploaderFile_fileListText__ro0Ol">
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo FileUploaderFile_fileListIcon__Ze747"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1p:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1p:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r1o:-file-document.pdf"
                    class="FileUploaderFile_fileListFile__YEohv"
              >
                document.pdf
              </span>
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1q:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1q:">
                  lastet opp
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":r1o:-file-document.pdf"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1r:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1r:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadResult smoke-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU bottomSpacingXL ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r10:"
            class="FileUploader_dropZone__YfvZ-  "
            aria-describedby=":r10:-accepted-formats"
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r10:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               hidden
        >
      </div>
    </button>
    <span id=":r10:-accepted-formats"
          class="FileUploader_fileInfo__-oBU8"
    >
      Filer du kan laste opp:
      <span class="FileUploader_fileFormatList__hIHfD">
        .java, .cpp, .py
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="Alert_alert__XPPVr Alert_alert_success__J2bFZ FileUploader_alert__SOw8I">
        <span class="Alert_iconWrapper__ZCD7G">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o Alert_icon__+KJ7h"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M12 2a10 10 0 0 1 10 10c0 5.523-4.477 10-10 10a10 10 0 0 1 0-20Zm-1 14.5 7-7-1.41-1.41L11 13.67l-3.09-3.08L6.5 12l4.5 4.5Z">
            </path>
          </svg>
        </span>
        <span class="Alert_content__t0Gya">
          Lastet opp 4 filer
        </span>
      </div>
    </div>
    <ul class="FileUploader_fileList__Rex9N">
      <li id=":r13:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <a id=":r13:-file-dokumentasjon.pdf"
               class="Link_link__jeUpY  FileUploaderFile_fileListText__ro0Ol"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo Link_icon__iy55p Link_icon_isCustom__nsOot"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS FileUploaderFile_successIconLinkMargin__OVlgK"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r15:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r15:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":r13:-file-dokumentasjon.pdf"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r16:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r16:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":r17:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <span class="FileUploaderFile_fileListText__ro0Ol">
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo FileUploaderFile_fileListIcon__Ze747"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r18:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r18:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r17:-file-grunnlag.jpg"
                    class="FileUploaderFile_fileListFile__YEohv"
              >
                grunnlag.jpg
              </span>
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r19:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r19:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":r17:-file-grunnlag.jpg"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1a:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1a:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
  <div class="FileUploader_container__IERNU  ">
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r1b:"
            class="FileUploader_dropZone__YfvZ-  "
            aria-describedby=":r1b:-accepted-formats"
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r1b:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".java, .cpp, .py"
               hidden
        >
      </div>
    </button>
    <span id=":r1b:-accepted-formats"
          class="FileUploader_fileInfo__-oBU8"
    >
      Filer du kan laste opp:
      <span class="FileUploader_fileFormatList__hIHfD">
        .java, .cpp, .py
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
      <div class="Alert_alert__XPPVr Alert_alert_warning__SfZPF FileUploader_alert__SOw8I">
        <span class="Alert_iconWrapper__ZCD7G">
          <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o Alert_icon__+KJ7h"
               viewbox="0 0 24 24"
               focusable="false"
               aria-hidden="true"
               role="img"
          >
            <path d="M13 13h-2V7h2v6Zm0 4h-2v-2h2v2ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
            </path>
          </svg>
        </span>
        <span class="Alert_content__t0Gya">
          1 av 3 filer ble stoppet av virussjekk.
        </span>
      </div>
    </div>
    <ul class="FileUploader_fileList__Rex9N">
      <li id=":r1e:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <a id=":r1e:-file-dokumentasjon.pdf"
               class="Link_link__jeUpY  FileUploaderFile_fileListText__ro0Ol"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo Link_icon__iy55p Link_icon_isCustom__nsOot"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS FileUploaderFile_successIconLinkMargin__OVlgK"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:r1g:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:r1g:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":r1e:-file-dokumentasjon.pdf"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1h:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1h:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":r1i:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <span class="FileUploaderFile_fileListText__ro0Ol">
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo FileUploaderFile_fileListIcon__Ze747"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1j:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1j:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":r1i:-file-grunnlag.jpg"
                    class="FileUploaderFile_fileListFile__YEohv"
              >
                grunnlag.jpg
              </span>
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1k:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1k:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":r1i:-file-grunnlag.jpg"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:r1l:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:r1l:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;

exports[`Tester/FileUploader WithUploadedFiles play-test 1`] = `
<div data-test-block="true">
  <div class="FileUploader_container__IERNU  ">
    <label id="labelId-:r7:"
           class="LabelWithHelp_label__59tP-"
           for=":r6:"
    >
      Dokumentasjon og grunnlag
    </label>
    <button class="IconButton_button__mw9sG IconButton_button_extraSmall__3+QfY IconButton_button_outlined__aDbNH Help_helpButton__I0E-6"
            type="button"
            aria-describedby="labelId-:r7:"
            aria-expanded="false"
    >
      <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
           viewbox="0 0 24 24"
           focusable="false"
           aria-labelledby="svgtitle-:r8:"
           aria-hidden="false"
           role="img"
      >
        <title id="svgtitle-:r8:">
          Hjelp
        </title>
        <path d="M10 19h3v3h-3v-3Zm2-17c5.35.22 7.68 5.62 4.5 9.67-.83 1-2.17 1.66-2.83 2.5C13 15 13 16 13 17h-3c0-1.67 0-3.08.67-4.08.66-1 2-1.59 2.83-2.25C15.92 8.43 15.32 5.26 12 5a3 3 0 0 0-3 3H6a6 6 0 0 1 6-6Z">
        </path>
      </svg>
    </button>
    <div tabindex="-1">
    </div>
    <button type="button"
            id=":r6:"
            class="FileUploader_dropZone__YfvZ-  "
            aria-describedby=":r6:-accepted-formats"
    >
      <div class="FileUploader_removePointerEvents__Ij6pE">
        <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_large__c527o FileUploader_icon__Dl3qo"
             viewbox="0 0 24 24"
             focusable="false"
             aria-hidden="true"
             role="img"
        >
          <path d="M16.5 6v11.5a4 4 0 1 1-8 0V5a2.5 2.5 0 1 1 5 0v10.5a1 1 0 0 1-2 0V6H10v9.5a2.5 2.5 0 0 0 5 0V5a4 4 0 1 0-8 0v12.5a5.5 5.5 0 0 0 11 0V6h-1.5Z">
          </path>
        </svg>
        <label class="FileUploader_innerLabel__tJLzI"
               for=":r6:"
        >
          Legg til fil
        </label>
        <input data-testid="undefined-input"
               type="file"
               accept=".pdf, .jpeg"
               hidden
        >
      </div>
    </button>
    <span id=":r6:-accepted-formats"
          class="FileUploader_fileInfo__-oBU8"
    >
      Filer du kan laste opp:
      <span class="FileUploader_fileFormatList__hIHfD">
        .pdf, .jpeg
      </span>
    </span>
    <div aria-live="assertive"
         aria-atomic="true"
    >
    </div>
    <div aria-live="polite"
         aria-atomic="true"
    >
    </div>
    <ul class="FileUploader_fileList__Rex9N">
      <li id=":ra:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <a id=":ra:-file-dokumentasjon.pdf"
               class="Link_link__jeUpY  FileUploaderFile_fileListText__ro0Ol"
               href="https://www.skatteetaten.no/person/"
               download
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo Link_icon__iy55p Link_icon_isCustom__nsOot"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              dokumentasjon.pdf
            </a>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS FileUploaderFile_successIconLinkMargin__OVlgK"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:rc:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:rc:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":ra:-file-dokumentasjon.pdf"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rd:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rd:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":re:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <span class="FileUploaderFile_fileListText__ro0Ol">
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo FileUploaderFile_fileListIcon__Ze747"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rf:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rf:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":re:-file-grunnlag.jpg"
                    class="FileUploaderFile_fileListFile__YEohv"
              >
                grunnlag.jpg
              </span>
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rg:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rg:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":re:-file-grunnlag.jpg"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rh:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rh:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":ri:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <span class="FileUploaderFile_fileListText__ro0Ol">
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo FileUploaderFile_fileListIcon__Ze747"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rj:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rj:">
                  Fil
                </title>
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              <span id=":ri:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
                    class="FileUploaderFile_fileListFile__YEohv"
              >
                Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg
              </span>
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rk:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rk:">
                  Fullført
                </title>
                <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
                </path>
              </svg>
            </span>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":ri:-file-Screen_Shot_2023_08_03_at_14_48_38_PM_111.jpg"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rl:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rl:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
      <li id=":rm:"
          class="FileUploaderFile_fileListItem__S2DYp "
      >
        <div class="FileUploaderFile_fileListContainer__+8bue">
          <span class="FileUploaderFile_fileListGrid__Xh3QU">
            <a id=":rm:-file-test.png"
               class="Link_link__jeUpY  FileUploaderFile_fileListText__ro0Ol"
               href="http://localhost:4400/designsystem_illustrasjon.png"
               download
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_small__Yzxmo Link_icon__iy55p Link_icon_isCustom__nsOot"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-hidden="true"
                   role="img"
              >
                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6Zm4 18H6V4h7v5h5v11Z">
                </path>
              </svg>
              test.png
            </a>
            <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz FileUploaderFile_successIcon__BwhkS FileUploaderFile_successIconLinkMargin__OVlgK"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-labelledby="svgtitle-:ro:"
                 aria-hidden="false"
                 role="img"
            >
              <title id="svgtitle-:ro:">
                Fullført
              </title>
              <path d="M21 7 9 19l-5.5-5.5 1.41-1.41L9 16.17 19.59 5.59 21 7Z">
              </path>
            </svg>
          </span>
          <span>
            <button class="IconButton_button__mw9sG IconButton_button_medium__8KBUt  FileUploaderFile_cancelIcon__1HRVz"
                    type="button"
                    aria-describedby=":rm:-file-test.png"
            >
              <svg class="Icon_systemIcon__1p1Xl Icon_systemIcon_medium__VmCFz IconButton_icon__1J4sN"
                   viewbox="0 0 24 24"
                   focusable="false"
                   aria-labelledby="svgtitle-:rp:"
                   aria-hidden="false"
                   role="img"
              >
                <title id="svgtitle-:rp:">
                  Fjern fil
                </title>
                <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41Z">
                </path>
              </svg>
            </button>
          </span>
        </div>
      </li>
    </ul>
    <div class="FileUploader_srOnly__ZWpt4"
         aria-live="polite"
         aria-atomic="true"
    >
    </div>
  </div>
</div>
`;
